<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PVReminderActivity" 
    android:background="@color/white">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/pvrTitle"
        android:textColor="@color/darkblue"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reminderLaterButton"
        android:background="@drawable/button_style_red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/completePVBUtton"
        android:layout_alignBottom="@+id/completePVBUtton"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/completePVBUtton"
        android:text="@string/reminderLaterString"
        android:textSize="12sp" />

    <Button
        android:id="@+id/completePVBUtton"
        android:background="@drawable/button_style_green"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="96dp"
        android:text="@string/completeButtonString"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/disclaimer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/completePVBUtton"
        android:layout_below="@+id/reminderLaterButton"
        android:textSize="12sp"
       	android:gravity="left"
       	android:textStyle="italic"
       	android:textColor="@color/gray"
        android:text="@string/disclaimer" />

    <ImageView
        android:contentDescription="@string/clockImage"
        android:id="@+id/clockImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_below="@+id/txtTitle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
         />

</RelativeLayout>